--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "clean": "rm -rf cache/ artifacts/",
     "compile": "hardhat compile",
     "deploy:sepolia": "DEPLOY=v1.0.0.sepolia hardhat deploy --network sepolia",
-    "deploy:mumbai": "DEPLOY=v1.0.0.mumbai hardhat deploy --network mumbai"
+    "deploy:mumbai": "DEPLOY=v1.0.0.mumbai hardhat deploy --network mumbai",
+    "generate": "node ./scripts/generateContractList.js"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
