--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "generate": "node ./scripts/generateContractList.js"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-foundry": "^1.1.1",
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.4.1",
     "chalk": "^4.0.0",
