--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@nomicfoundation/hardhat-foundry": "^1.1.1",
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.4.1",
+    "@tenderly/hardhat-tenderly": "^1.7.7",
     "chalk": "^4.0.0",
     "ethers": "^6.6.2",
     "hardhat": "^2.16.1",
