added Router of farm contract

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "hardhat-deploy": "^0.11.34"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.9.2"
+    "@openzeppelin/contracts": "^4.9.2",
+    "@uniswap/v2-periphery": "^1.1.0-beta.0"
   }
 }
